--- a/gezana_app/templates/gezana_app/menu_list.html
+++ b/gezana_app/templates/gezana_app/menu_list.html
@@ -22,15 +22,20 @@
     {% for item in items %}
     <div class="menu-card">
 
-        <div class="menu-img-wrapper">
-            {% if item.image and item.image.url %}
-                <img src="{{ item.image.url }}" 
-                     alt="{{ item.name }}" 
-                     class="menu-img"
-                     onclick="openModal('{{ item.image.url }}')">
-            {% else %}
-                <img src="{% static 'images/no_image_available.jpg' %}" class="menu-img" alt="No image">
-            {% endif %}
+        {% load static %}
+
+<div class="menu-img-wrapper">
+    {% if item.image %}
+        <img src="{{ item.image.url }}"
+             alt="{{ item.name }}"
+             class="menu-img"
+             onclick="openModal('{{ item.image.url }}')">
+    {% else %}
+        <img src="{% static 'images/no_image_available.png' %}"
+             class="menu-img"
+             alt="No image available">
+    {% endif %}
+
             <div class="menu-badges">
                 {% if item.is_vegetarian %}<span class="pill veg">Veg</span>{% endif %}
                 {% if item.is_new %}<span class="pill new">New</span>{% endif %}
